Hair disappears in Rendering after Particle Editing (Combing, Cutting, etc) in Blender Render (not Cycles) #39322

Closed
opened 2014-03-21 13:12:25 +01:00 by oginundercover · 14 comments
oginundercover commented 2014-03-21 13:12:25 +01:00 (Migrated from localhost:3001)

System Information
Windows 8
Intel Core i5-4200U
nVidia GeForce 720M 2 GB
RAM 4 GB

Blender Version
Broken: 2.70
Worked: (2.69)

Pictures
in 2.70
setelah_disisir.png

in 2.69
blender_2.69.png

Exact steps for others to reproduce the error
Just create a simple mesh, do some quick particle settings, and compare it before and after particle edit in Blender 2.70.

**System Information** Windows 8 Intel Core i5-4200U nVidia GeForce 720M 2 GB RAM 4 GB **Blender Version** Broken: 2.70 Worked: (2.69) **Pictures** in 2.70 ![setelah_disisir.png](https://archive.blender.org/developer/F82079/setelah_disisir.png) in 2.69 ![blender_2.69.png](https://archive.blender.org/developer/F82082/blender_2.69.png) **Exact steps for others to reproduce the error** Just create a simple mesh, do some quick particle settings, and compare it before and after particle edit in Blender 2.70.
oginundercover commented 2014-03-21 13:12:25 +01:00 (Migrated from localhost:3001)
Author

Changed status to: 'Open'

Changed status to: 'Open'
oginundercover commented 2014-03-21 13:12:25 +01:00 (Migrated from localhost:3001)
Author

Added subscriber: @oginundercover

Added subscriber: @oginundercover
Author

#39568 was marked as duplicate of this issue

#39568 was marked as duplicate of this issue

Added subscriber: @willi-2

Added subscriber: @willi-2

I can repro it on Win7/64.

I'd like to add that you're referring to the "rendered" shading mode in the viewport, not to the render result. The render result is correct in 2.70, too.

I can repro it on Win7/64. I'd like to add that you're referring to the "rendered" shading mode in the viewport, not to the render result. The render result is correct in 2.70, too.

Added subscriber: @gandalf3

Added subscriber: @gandalf3

◀ Merged tasks: #39568.

◀ Merged tasks: #39568.

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

This is by design - particle, sculpt etc edit modes do not synchronize with viewport. However there is a bug here, which is
that returning to object mode should rerender the hair.

This is by design - particle, sculpt etc edit modes do not synchronize with viewport. However there is a bug here, which is that returning to object mode should rerender the hair.
Antonis Ryakiotakis self-assigned this 2014-05-05 18:49:24 +02:00
Author

This issue was referenced by blender/blender-addons-contrib@fbfaa4770d

This issue was referenced by blender/blender-addons-contrib@fbfaa4770dea5cac9f8f7baa955d33fb219bd74b
Author

This issue was referenced by fbfaa4770d

This issue was referenced by fbfaa4770dea5cac9f8f7baa955d33fb219bd74b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit fbfaa4770d.

Closed by commit fbfaa4770d.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39322
No description provided.