Fix T39322, hair not rendered in rendered mode viewport after returning from particle edit mode.

Check for object particle edit mode, not psys->edit. This won't get
freed on exit (which might be worth considering doing, maybe?)